FIrst page of the Portfolio

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 </head>
 
 <body>
-    <div>
-        <button>Smile a bit 😀</button>
+    <div class="full-screen container">
+        <img src="./assets/image/background.jpg" alt="">
+        <h1>Portfolio <br> d'Emmanuel</h1>
+        <p>
+            Dévelopeur Web front-end et back-end 
+            <br>
+            Bac + 3 en alternance
+        </p>
+        <p>Fait pour l'entreprise <br> Google</p>
     </div>
-    
 </body>
 
 </html>
